Fixing spacing issue introduced with previous commit.

--- a/assets/_scss/base.scss
+++ b/assets/_scss/base.scss
@@ -124,7 +124,7 @@ a.action {
 }
 
 .space-above {
-  margin-top: 6em;
+  margin-top: 6em !important;
 }
 
 .flex-container {
